--- a/app/assets/styles/modules/_generic-content.css
+++ b/app/assets/styles/modules/_generic-content.css
@@ -1,7 +1,9 @@
 .generic-content {
   p{
     line-height: 1.5;
-    margin: 1.5rem 0;
+    font-weight: 300;
+    margin: 0, 0, 1.5rem, 0;
+
     @mixin forSmall {
       font-size: 1.12rem;
     }
