--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -3,10 +3,18 @@
   &--gutters {
     margin-right: -65px;
   }
+  &--gutters-large {
+    margin-right: -6rem;
+  }
 
   &--gutters>div {
     padding-right: 65px;
   }
+
+  &--gutters-large>div {
+    padding-right: 6rem;
+  }
+
   &__b-margin-till-medium {
     margin-bottom:1rem;
   }
@@ -20,6 +28,10 @@
     }
     &__medium-4--larger {
       width: 37%;
+    }
+    &__medium-6 {
+      float: left;
+      width: 50%;
     }
     &__medium-8 {
       float: left;
