--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -3,6 +3,7 @@
   border-bottom: 10px solid #2f5572;
   &__image {
     display: block;
+    width: 100%
   }
   &__text-content{
     position: absolute;
