--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -3,8 +3,30 @@
   @mixin forMedium {
     padding: 4.5rem 0;
   }
+  &--no-b-padding-until-medium {
+    padding-bottom: 0;
+
+    @mixin forMedium {
+      padding-bottom: 4.5rem;
+    }
+  }
+  &--no-b-padding-until-large {
+    padding-bottom: 0;
+
+    @mixin forLarge {
+      padding-bottom: 4.5rem;
+    }
+  }
   &--blue {
-    background-color: #2f5572;
+    background-color: $mainBlue;
     color: #fff;
+  }
+  &--testimonials {
+    background: #e0e6ef;
+    @mixin forLarge {
+      background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+      background-size: cover;
+    }
+
   }
 }
