--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,18 +1,27 @@
 .row {
   @mixin clearfix;
+
+  &--t-padding {
+    padding-top: 5rem;
+  }
   &--gutters {
     margin-right: -65px;
   }
   &--gutters-large {
     margin-right: -6rem;
   }
-
+  &--gutters-small {
+    margin-right: -3rem;
+  }
   &--gutters>div {
     padding-right: 65px;
   }
 
   &--gutters-large>div {
     padding-right: 6rem;
+  }
+  &--gutters-small>div {
+    padding-right: 3rem;
   }
 
   &__b-margin-till-medium {
@@ -43,5 +52,49 @@
     }
 
   }
+  @mixin forLarge {
+    &__b-margin-till-large {
+      margin-bottom: 0;
+    }
+    &__large-4 {
+      float: left;
+      width: 33.33%;
+    }
+    &__large-4--larger {
+      width: 37%;
+    }
+    &__large-6 {
+      float: left;
+      width: 50%;
+    }
+    &__large-8 {
+      float: left;
+      width: 66.67%
+    }
 
+    &__large-8--smaller {
+      width: 63%;
+    }
+
+  }
+}
+  /* Begin equal-height-for-medium*/
+  &--equal-height-for-medium {
+    @mixin forMedium {
+      display: flex;
+    }
+    & > div {
+      float: none;
+      display: flex;
+    }
+    &--equal-height-for-large {
+      @mixin forLarge {
+        display: flex;
+      }
+      & > div {
+        float: none;
+        display: flex;
+      }
+
+  }
 }
