--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,12 +1,28 @@
 .wrapper {
   overflow: hidden;
-  padding-left: 18px;
-  padding-right: 18px;
+  padding-left: 1.15rem;
+  padding-right: 1.15rem;
   max-width: 1236px;
   margin-left: auto;
   margin-right: auto;
   &--medium {
     max-width: 976px;
+  }
+  &__no-padding-until-medium {
+    padding-left: 0;
+    padding-right: 0;
+    @mixin forMedium {
+      padding-left: 1.15rem;
+      padding-right: 1.15rem;
+    }
+  }
+  &__no-padding-until-large {
+    padding-left: 0;
+    padding-right: 0;
+    @mixin forLarge {
+      padding-left: 1.15rem;
+      padding-right: 1.15rem;
+    }
   }
   .wrapper {
     padding-left: 0;
