--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,6 +1,6 @@
 @import "normalize.css";
-@import "base/_variables";
 @import "base/_mixins";
+@import "base/_variables";
 @import "base/_global";
 @import "modules/_large-hero";
 @import "modules/_buttons";
@@ -11,3 +11,4 @@
 @import "modules/_generic-content";
 @import "modules/_section-title";
 @import "modules/_feature-item";
+@import "modules/_testimonials";
